Fix recently added Byte type test code to work under JDK1.4.  It was using Byte.valueOf(byte) which is a JDK1.5 method.